<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="rename_edittext"></item>
    
    <string name="app_name">Echoii</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">&lt;</string>
    <string name="login_title">中科甲骨云</string>
    <string name="login_account">账号</string>
    <string name="login_mode">手机/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_input_password">请输入您的密码</string>
    <string name="login_login">立即登陆</string>
    <string name="login_regisger">注册账号</string>
    <string name="login_forget_password">找回密码</string>
    <string name="register_title">注册中科甲骨云</string>
    <string name="register_normal">普通注册</string>
    <string name="register_quick">快速注册</string>
    <string name="register_hint_account">请输入您的手机/邮箱作为登陆账号</string>
    <string name="register_hint_password">请设置6-20个字符的密码</string>
    <string name="register_expanded"><u>  V  补充详细资料</u></string>
	<string name="register_register">立即注册</string>
	<string name="register_accounted"><u>已有甲骨云账号</u></string>
	<string name="greater"><u>&gt;</u></string>
	<string name="password_title">找回密码</string>
	<string name="password_input_number">请输入您的甲骨云账号(手机/邮箱账号)</string>
	<string name="password_vertification">请输入验证码</string>
	<string name="password_forgotpassword">立即找回密码</string>
	<string name="left_userdata">资料 &gt;</string>
	<string name="left_wifi">仅在wifi上传、下载</string>
	<string name="left_albums_backup">相册自动备份</string>
	<string name="left_file_browser">文件浏览模式</string>
	<string name="left_show_mode">缩略图模式 &amp;列表模式</string>
	<string name="left_localcache_clean">本地缓存清理</string>
	<string name="left_softlock">软件密码锁</string>
	<string name="left_share_accoutbinding">分享账号绑定</string>
	<string name="left_feedback">用户反馈</string>
	<string name="left_version">版本信息</string>
	<string name="left_exit">退出登录</string>
	<string name="title">中科甲骨云 </string>
	<string name="phone_title">手机</string>
	<string name="setting">用户设置</string>
	<string name="upload">上传</string>
	<string name="allselct">全选</string>
	<string name="exit">退出</string>
	<string name="main_cloud">&#160;甲骨云</string>
	<string name="main_datacenter">&#160;家庭数据中心</string>
	<string name="main_phone">&#160;手机</string>
	<string name="my_phone">我的手机</string>
	<string name="download">下载</string>
	<string name="sequence">排序</string>
	<string name="delete">删除</string>
	<string name="more">更多</string>
	<string name="rename">重命名</string>
	<string name="cut">剪切</string>
	<string name="copy">复制</string>
	<string name="share">分享</string>
	<string name="toast_name_null">请输入您的用户名。。。</string>
	<string name="toast_password_null">请输入您的密码。。。</string>
	<string name="lock_setting_title">密码锁设置</string>
	<string name="lock_back">返回</string>
	<string name="lock_input_setting">请设定您的密码</string>
	<string name="lock_detail">开启密码锁后，每次进入云盘都需要\n 输入你设置的四位数密码</string>
	<string name="shareaccount_title">分享账号的绑定</string>
	<string name="sina">新浪微博</string>
	<string name="weixin">微信</string>
	<string name="qqblog">腾讯微博</string>
	<string name="qqzone">QQ空间</string>
	<string name="hint_weibo">请输入您的微博账号</string>
	<string name="bind">立即绑定</string>
	
	<string name="allfile_fold">全部文件</string>
	<string name="allfile_unfold">全部文件</string>  <!-- 展开 -->
	<string name="allfile">全部文件 </string>   
	<string name="photo">图片</string>
	<string name="audio">音乐</string>
	<string name="video">视频</string>
	<string name="doc">文档</string>
	<string name="bt">BT种子</string>
	<string name="others">其他</string>
	<string name="group">我的群</string>
	<string name="resource">热门资源</string>
	<string name="folder">新建文件夹</string>
	<string name="select_upload_typed">选择上传文件类型</string>
	<string name="register_complete">完成</string>
	<string name="register_head">头像</string>
	<string name="register_nick">昵称</string>
	<string name="register_sex">性别</string>
	<string name="register_birthday">生日</string>
	<string name="register_qq">QQ</string>
	<string name="register_phone">手机</string>
	<string name="register_mail">邮箱</string>
	<string name="register_microblog">微博</string>
	<string name="register_signature">个性签名</string>
	<string name="show">此功能还未开放， 敬请期待。。。</string>
	<string name="register_result">注册成功</string>
	<string name="file_null">数据为空，\n请更换其他~~</string>
	<string name="list_sale">拍卖</string>
	<string name="list_save">转存</string>
	<string name="list_move">移动到</string>
	<string name="list_move_confirm">确认</string>
	<string name="list_paste">粘贴</string>
	<string name="list_cancle">取消</string>
	<string name="list_copy">复制到</string>
	<string name="list_del">删除</string>
	<string name="list_rename">重命名</string>
	<string name="my_share">我的分享</string>
	<string name="list_share">分享</string>
	<string name="haveselected">已选定</string>
	<string name="num">个</string>
	<string name="listview_header_back">返回上一层</string>
	<string name="choose_files_first">请先选择文件</string>
	<string name="choose_files_path">请选择路径</string>
	<string name="choose_path_error">不能选择当前路径</string>
	<string name="dc_disconnection">断开</string>
	<string name="sure_ok">确定</string>
	<string name="take_photo">启动相机</string>
	<string name="upload_photo">上传照片</string>
	<string name="take_photo_title">拍照上传</string>
	<string name="data_market">数据市场</string>	
	<string name="money">&#165;</string> 
	
	<string name="data_shopping">数据买卖</string>
	<string name="data_hot_video">热门视频</string>
	<string name="data_travel">旅游攻略</string>
	<string name="data_book">电子书</string>
	<string name="data_myauction">我的拍卖</string>
	<string name="data_mydeal">我的交易</string>
	<string name="search_datacenter">搜索家庭数据中心</string>
	<string name="login_datacenter">立即登陆</string>
	<string name="left_expanded">扩容</string>
	<string name="left_buy">购买</string>
	<string name="video_play">玩视频</string>
	<string name="video_change">视频转码</string>
	<string name="video_change_detail">拍摄一段视频，可对视频进行压缩，调色</string>
	<string name="video_edit">视频编辑</string>
	<string name="video_edit_detail">编辑视频的长度，帮视频配上有趣的字幕</string>
	<string name="video_contentchange">视频内容替换</string>
	<string name="video_contentchange_detail">可对视频背景和人脸进行替换</string>
</resources>
