<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phonelist_operate_filefolder"
    android:background="#e6e6e6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
		 <ImageView
            android:id="@+id/phonelist_line"
            android:layout_width="10px"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/phone_shadow" />
		  <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/phonelist_line"
                android:visibility="visible"
                 >
           <Button 
                android:id="@+id/phonelist_sale"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/list_sale"
                android:background="@null"
                android:drawableTop="@drawable/file_sale_style"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                />
            <Button 
                android:id="@+id/phonelist_save"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/list_save"
                android:background="@null"
                android:drawableTop="@drawable/file_save_style"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                android:gravity="center"
                android:layout_below="@id/phonelist_sale"
                 android:layout_marginTop="15dp"
                />
           <Button 
                android:id="@+id/phonelist_move"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/list_move"
                android:background="@null"
                android:drawableTop="@drawable/file_move_style"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                android:gravity="center"
                android:layout_below="@id/phonelist_save"
                 android:layout_marginTop="15dp"
                />
       
               
           <Button 
                android:id="@+id/phonelist_copy"
                android:background="@null"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/file_copy_style"
                android:text="@string/list_copy"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                 android:layout_below="@id/phonelist_move"
                  android:layout_marginTop="15dp"
                />

            <Button 
                android:id="@+id/phonelist_del"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/list_del"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                android:background="@null"
                 android:drawableTop="@drawable/file_del_style"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_below="@id/phonelist_copy"
                 android:layout_marginTop="15dp"
                />
            <Button 
                android:id="@+id/phonelist_rename"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/list_rename"
                android:textSize="15sp"
                android:background="@null"
                android:drawableTop="@drawable/file_rename_style"
                android:textColor="@color/fonts_operate_normal"
                android:gravity="center"
                android:layout_below="@id/phonelist_del"
                android:layout_marginTop="15dp"
                />     
                
             <Button 
                android:id="@+id/phonelist_share"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/file_share_style"
                android:text="@string/list_share"
                android:textSize="15sp"
                android:textColor="@color/fonts_operate_normal"
                android:gravity="center"
                android:layout_below="@id/phonelist_rename"
                android:layout_marginTop="15dp"
                />   
        </RelativeLayout>
</RelativeLayout>
