<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:background="@drawable/background"
    android:orientation="vertical" >  
      
	<RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/title_back" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:text="@string/lock_back"
            android:textColor="@android:color/white"
            android:textSize="16sp"
             />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/back"
            android:src="@drawable/line_left" />

        <TextView
            android:id="@+id/tvew_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/video_play"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        
        <TextView
            android:id="@+id/exit"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/exit"
            android:visibility="invisible"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/exit"
            android:src="@drawable/line_right" />
    </RelativeLayout>
    <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    >
        <LinearLayout 
         	  android:layout_width="match_parent"
	  		  android:layout_height="wrap_content"
	    	  android:orientation="vertical"
            >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_margin="10dp"
	    android:layout_gravity="center_horizontal"
	    android:background="@drawable/video_play_item_bg"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_change"
	        android:textColor="@android:color/primary_text_light"
	        android:textSize="20sp"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_change_detail"
	        android:textColor="@android:color/secondary_text_dark"
	        android:textSize="14sp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginRight="6dp"
	        android:layout_marginBottom="6dp"
	        android:src="@drawable/video_play_a1"
	        android:scaleType="fitXY"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
	    android:background="@drawable/video_play_item_bg"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_edit"
	        android:textColor="@android:color/primary_text_light"
	        android:textSize="20sp"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_edit_detail"
	        android:textColor="@android:color/secondary_text_dark"
	        android:textSize="14sp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginRight="6dp"
	        android:layout_marginBottom="6dp"
	        android:src="@drawable/video_play_a2"
	        android:scaleType="fitXY"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="10dp"
	    android:background="@drawable/video_play_item_bg"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_contentchange"
	        android:textColor="@android:color/primary_text_light"
	        android:textSize="20sp"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:text="@string/video_contentchange_detail"
	        android:textColor="@android:color/secondary_text_dark"
	        android:textSize="14sp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="6dp"
	        android:layout_marginRight="6dp"
	        android:layout_marginBottom="6dp"
	        android:src="@drawable/video_play_a3"
	        android:scaleType="fitXY"
	        />
	</LinearLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>

