<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
       android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
  	    android:id="@+id/layout_title"
  	    android:layout_width="match_parent"
  	    android:layout_height="?android:attr/actionBarSize"
  	    android:background="@drawable/title_back"
  	    >
  	    <TextView 
  	        android:id="@+id/back"
  	        android:layout_width="wrap_content"
  	        android:layout_height="20dp"  	
  	        android:layout_marginLeft="10dp"
  	        android:layout_centerVertical="true"
  	        android:gravity="center"
  	        android:text="@string/lock_back"
  	        android:textColor="@android:color/white"
  	        />
  	    <ImageView
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/back"
            android:src="@drawable/line_left" />
  	    <TextView 
  	        android:id="@+id/tvew_title"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:textColor="@android:color/white"
  	        android:text="@string/password_title"
  	        android:textSize="20sp"
  	        android:layout_centerInParent="true"
  	        />
  	</RelativeLayout>
  	
	<EditText 
	    android:id="@+id/password_account"
	  	android:layout_width="fill_parent"
	  	android:layout_height="?android:attr/actionBarSize"
	  	android:background="@drawable/eidt_background"
	  	android:layout_margin="10dp"
	  	android:inputType="textPassword"
	  	android:hint="@string/password_input_number"
	  	android:textSize="12sp"
	  	android:paddingLeft="10dp"
	    />
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/actionBarSize"	    
	    >
	    <EditText 
	        android:id="@+id/password_vertification"
	        android:layout_width="180dp"
	        android:layout_height="?android:attr/actionBarSize"
	        android:layout_marginLeft="10dp"
	        android:layout_centerVertical="true"
	        android:textSize="12sp"
	        android:paddingLeft="10dp"
	        android:background="@drawable/eidt_background"
	        android:hint="@string/password_vertification"
	        />
	    <TextView 
	        android:id="@+id/tvew_password_verti"
	        android:layout_width="80dp"
	        android:layout_height="?android:attr/actionBarSize"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/u14"
	        android:gravity="center"
	        android:text="xyht"
	        />
	</RelativeLayout>
	<Button 
	    android:id="@+id/btn_register"
	    android:layout_width="match_parent"
	    android:layout_height="?android:attr/actionBarSize"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:background="@drawable/register_button_background"
	    android:textColor="@android:color/white"
	    android:text="@string/password_forgotpassword"
	    android:textSize="15sp"
	    />
</LinearLayout>
